Fix search input covering content

--- a/src/components/family-tree/familyTree.scss
+++ b/src/components/family-tree/familyTree.scss
@@ -2,6 +2,6 @@
   margin: auto;
   display: flex;
   justify-content: center;
-  padding: 40px;
+  padding: 100px 40px;
   box-sizing: border-box;
 }
